Upgraded jquery and removed some broken AU National Map resources

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
       <div class="row">
         <div class="span4 collapse-group">
         <h2>Help</h2>
-        <a href="terriajs.io" target="_blank">TerriaJS</a> is the software that runs National Map, AREMI, Northern Australia Map, NEII Viewer, and related sites. This tool is for TerriaJS administrators in charge of managing the catalogs for those sites. It lets you load a catalog (a list of datasources), make changes to it, and then save a copy to the web.
+         This tool lets you load a <a href="terriajs.io" target="_blank">TerriaJS</a> catalog (a list of datasources), make changes to it, and then save a copy to the web.
         <div class="collapse">
         <h3>Loading a catalog</h3>
         <p>To load a catalog, either:
         <ol>
-          <li>Click the name of one of the National Map catalog groups, then click the <b>Load</b> button.</li>
+          <li>Click the name of one of the catalog groups, then click the <b>Load</b> button.</li>
           <li>If the catalog JSON code is on the web somewhere, paste the URL into the URL box then click the <b>Load</b> button.</li>
           <li>Copy the JSON code for the catalog from somewhere else. Paste it into the JSON code box, then click anywhere outside the box to load from it.</li>
 
@@ -59,7 +59,7 @@
         </p>
         <h3>Saving changes</h3>
         Click the <b>Save to Gist</b> button. A copy of the catalog will be saved to Gist, a website for storing text files
-        run by GitHub. The contents is private unless you share the URL with someone. You can then preview the changes or
+        run by GitHub. You can then preview the changes or
         send a copy to the system administrator.
         <h3>Adding properties</h3>
         There are many additional properties you can add to each catalog item or group besides its name and type. 
@@ -122,7 +122,7 @@
         <div class="col-sm-5">
         <ul id="other-jsons">
         <h3>Other TerriaJS projects</h3>
-        <li><a href="#">test-special</a></a></li>
+        <li><a href="#">PADUS</a></a></li>
         <li><a href="#">test</a></li>
         <!-- <li><a href="#">aremi</a></li>-->
         <li><a href="#">(blank)</a></li>
